// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps matches the last snapshot 1`] = `
Object {
  "logout": [Function],
  "selectCommunity": [Function],
  "selectNetwork": [Function],
}
`;

exports[`mapStateToProps matches the latest snapshot 1`] = `
Object {
  "avatarUrl": undefined,
  "canModerateCurrentCommunity": undefined,
  "communities": Array [],
  "currentCommunity": SessionBoundModel {
    "_fields": Object {
      "avatarUrl": "someUrl",
      "id": "7",
      "name": "someName",
    },
    "avatarUrl": "someUrl",
  },
  "currentCommunityId": "7",
  "currentContext": SessionBoundModel {
    "_fields": Object {
      "avatarUrl": "someUrl",
      "id": "7",
      "name": "someName",
    },
    "avatarUrl": "someUrl",
  },
  "currentNetworkId": undefined,
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "33",
      "name": "meUser",
    },
    "id": "33",
  },
  "name": "meUser",
  "networks": Array [
    Object {
      "communities": Array [],
      "id": "all-communities",
      "name": "All Communities",
    },
  ],
}
`;

exports[`mergeProps matches snapshot 1`] = `
Object {
  "canModerateCurrentCommunity": true,
  "currentUser": Object {
    "id": "anyid",
  },
  "goToCommunity": [Function],
  "goToCommunitySettingsMenu": [Function],
  "goToCreateCommunityName": [Function],
  "goToMyProfile": [Function],
  "goToNetwork": [Function],
  "name": "Roy Rogers",
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "selectCommunity": [MockFunction],
  "selectNetwork": [MockFunction],
  "showSettings": [Function],
}
`;

exports[`mergeProps matches snapshot 2`] = `
Object {
  "canModerateCurrentCommunity": false,
  "currentUser": Object {
    "id": "anyid",
  },
  "goToCommunity": [Function],
  "goToCommunitySettingsMenu": false,
  "goToCreateCommunityName": [Function],
  "goToMyProfile": [Function],
  "goToNetwork": [Function],
  "name": "Roy Rogers",
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "selectCommunity": [MockFunction],
  "selectNetwork": [MockFunction],
  "showSettings": [Function],
}
`;

exports[`partitionCommunities separates independent communities from networked communities 1`] = `
Object {
  "communities": Array [
    Object {
      "id": "2",
      "name": "two",
      "network": undefined,
      "newPostCount": undefined,
    },
    Object {
      "id": "5",
      "name": "five",
      "network": undefined,
      "newPostCount": undefined,
    },
  ],
  "networks": Array [
    Object {
      "communities": Array [],
      "id": "all-communities",
      "name": "All Communities",
    },
    Object {
      "communities": Array [
        Object {
          "id": "1",
          "name": "one",
          "network": Object {
            "communities": undefined,
            "id": "1",
            "name": "networkOne",
          },
          "newPostCount": undefined,
        },
        Object {
          "id": "4",
          "name": "four",
          "network": Object {
            "communities": undefined,
            "id": "1",
            "name": "networkOne",
          },
          "newPostCount": undefined,
        },
      ],
      "id": "1",
      "name": "networkOne",
      "nonMemberCommunities": undefined,
    },
    Object {
      "communities": Array [
        Object {
          "id": "3",
          "name": "three",
          "network": Object {
            "communities": undefined,
            "id": "2",
            "name": "networkTwo",
          },
          "newPostCount": undefined,
        },
      ],
      "id": "2",
      "name": "networkTwo",
      "nonMemberCommunities": undefined,
    },
  ],
}
`;
